--- a/server.properties
+++ b/server.properties
@@ -1,5 +1,5 @@
 #Minecraft server properties
-#Thu Feb 22 23:56:50 VLAT 2024
+#Thu Feb 22 23:11:56 YAKT 2024
 spawn-protection=16
 max-tick-time=-1
 generator-settings=
@@ -36,7 +36,7 @@ generate-structures=true
 online-mode=false
 max-build-height=256
 level-seed=
-prevent-proxy-connections=false
 use-native-transport=true
-enable-rcon=false
+prevent-proxy-connections=false
 motd=2.9 \:)
+enable-rcon=false
